k8s/monitoring/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: sabino-labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:7.5.2
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: '100Mi'
              cpu: '100m'
            limits:
              memory: '250Mi'
              cpu: '200m'
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/grafana-storage
      volumes:
        - name: grafana-storage
          emptyDir: {}
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: sabino-labs
  labels:
    app: grafana
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
---
