k8s/monitoring/prometheus-cr.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: sabino-labs
spec:
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: prometheus
